--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/port-main/profile-1.jpeg" alt="">
+                    <img src="https://github.com/ramasubramanian07/port/blob/be05660a653020ea6b10be37c982beb6b1ed0538/Profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Rama Subramanian and<span class="typing-2"></span></div>
