--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="Profile-1.jpeg" alt="">
+                    <img src="about.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Rama Subramanian and<span class="typing-2"></span></div>
                     <p>I’m a nice fun and friendly person, I’m honest and punctual, I work well in a team but also on my own as I like to set myself goals which I will achieve, I have good listening and communication skills. I have a creative mind and am always up for new challenges. I am well organized and always plan ahead to make sure I manage my time well.
 </p>
-                     <a href="960098147.pdf" download ="960098147.pdf" class="btn">Download Resume</a>
+                     <a href="resume.pdf" download ="resume.pdf" class="btn">Download Resume</a>
                 </div>
             </div>
         </div>
