--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                 <div class="column left">
                     <div class="text">Have Any Project?</div>
 					 <div class="text">Call On</div>
-                    <p>Mobile :9600989147 <br>
-Email :poovalingamramasubramanian@gmail.com </p>
+                    <p>Mobile :9600989147 <br>Email :poovalingamramasubramanian@gmail.com </p>
                    
         </div>
     </section>
